--- a/PSET5/homepage/contact.html
+++ b/PSET5/homepage/contact.html
@@ -47,7 +47,7 @@
 </nav>
 <!-- End of Navbar -->
 
-<!-- Sendpoint Contact Form -->
+<!-- Sendpoint.io Contact Form -->
 <form action="https://sendpoint.io/id/cs50" method="POST">
 <br>
 <h1 class="text-center">Contact @mrkwapo</h1>
